syntax = "proto3";

package twitter_clone;

service User{
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc LogoutUser(LogoutUserRequest) returns (LogoutUserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc FollowUser(FollowRequest) returns (UserResponse);
  rpc UnfollowUser(FollowRequest) returns (UserResponse);
}



service Tweet{
  rpc CreateTweet(CreateTweetRequest) returns (CreateTweetResponse);
}

message FollowRequest{
  int32 user_id = 1;
}


message CreateTweetRequest{

}

message CreateTweetResponse{

}

message GetUserRequest{

}

message UserResponse{
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  bool active = 4;
  uint32  followers = 5;
  uint32  following = 6;
}

message LogoutUserRequest{
}

message LogoutUserResponse{
  bool success = 1;
}

message LoginUserRequest{
  string email = 1;
  string password = 2;
}

message LoginUserResponse{
  bool success = 1;
  string token = 2;
}


message RegisterUserRequest{
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message RegisterUserResponse{
  bool success = 1;
}